-now records multiple games for best-of tournaments -units no longer attempt to attack or cast spells when matrixed -tournament strategy selection added